fixed navigation so is relative, added link from index item to show the item in show controller and started fixing html whitespace overflow

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -3,7 +3,7 @@
 */
 
 body {
-    margin: 0px;
+    margin-bottom: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
